SimpleGrid and TwoColumn grid demo site work. Breaking changes to the interfaces.

--- a/Sockethead.Razor/Views/Shared/_SHGridSearch.cshtml
+++ b/Sockethead.Razor/Views/Shared/_SHGridSearch.cshtml
@@ -3,6 +3,7 @@
 <form class="form-inline" method="post" asp-area="Sockethead" asp-controller="SimpleGrid" asp-action="SearchHandler">
 
     <input type="hidden" asp-for="RedirectUrl" />
+    <input type="hidden" asp-for="GridId" />
 
     <label class="sr-only" for="inlineFormInputGroupUsername2">Query</label>
     <div class="input-group mb-2 mr-sm-2">
