--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/BulletList.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/BulletList.cshtml
@@ -36,7 +36,7 @@
     .AddColumn(col => col
         .Header("Cast")
         .DisplayAsList(movie => 
-            movie.Cast.Select(c => c.Name)))
+            movie.Cast?.Select(c => c.Name)))
 
     .RenderAsync())</code></pre>
 
