--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/ColumnSelection.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/ColumnSelection.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IQueryable<Movie>
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
 
 @(await Html
     .SimpleGrid(Model.Take(3))
@@ -10,7 +10,7 @@
 
     </div>
 
-    <div class="col-6">
+    <div class="col-md-6">
 
         <h4>Automatically Select Columns</h4>
 
@@ -32,7 +32,7 @@
 <hr />
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
 
 @(await Html
     .SimpleGrid(Model.Take(3))
@@ -44,7 +44,7 @@
 
     </div>
 
-    <div class="col-6">
+    <div class="col-md-6">
         <h4>Select Specific Columns</h4>
 
         <pre><code>@@(await Html
@@ -66,7 +66,7 @@
 <hr />
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
 
 @(await Html
     .SimpleGrid(Model.Take(3))
@@ -77,7 +77,7 @@
 
     </div>
 
-    <div class="col-6">
+    <div class="col-md-6">
         <h4>Remove Columns</h4>
 
         <pre><code>@@(await Html
