--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Template.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Template.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IQueryable<Movie>
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
 
 @(await Html
     .SimpleGrid(Model.Take(3))
@@ -10,7 +10,7 @@
 
     </div>
 
-    <div class="col-6">
+    <div class="col-md-6">
         <pre><code></code></pre>
 
         <p></p>
